--- a/UBus-react/src/containers/search/search.css
+++ b/UBus-react/src/containers/search/search.css
@@ -133,4 +133,60 @@
     justify-content: center;
     align-items: center;
     font-family: 'Manrope', sans-serif;
+    position: relative;
+}
+
+#search-input {
+    width: 100%;
+    height: 50px;
+    border: 2px solid #007AFF;
+    background-color: #040C18;
+    border-radius: 5px;
+    padding: 0 1rem;
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 28px;
+    color: #fff;
+    outline: none;
+}
+
+.searchBtn {
+    width: 10%;
+    height: 50px;
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 28px;
+    background: #007AFF;
+    border: 2px solid #007AFF;
+    padding: 0 1rem;
+    color: #fff;
+    cursor: pointer;
+    outline: none;
+    margin-top: 1rem;
+
+    border-radius: 5px;
+}
+
+.close-button {
+    position: absolute;
+    top: 10px; /* Adjust the top and right values as needed */
+    right: 10px; /* Adjust the top and right values as needed */
+    width: 50px;
+    height: 50px;
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 28px;
+    background: #007AFF;
+    border: 2px solid #007AFF;
+    color: #fff;
+    cursor: pointer;
+    outline: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
   }
+  
