--- a/UBus-react/src/containers/booking/booking.css
+++ b/UBus-react/src/containers/booking/booking.css
@@ -1,22 +1,34 @@
 .booking-container {
-    height: 30vh;
+    height: 40vh;
     width: 173vh;
-    margin-left: 80px;
+    margin-left: 10%;
     margin-bottom: 50px;
     border-radius: 0 0 25px 25px;
     background-color: #292F38;
+    align-items: center;
+    text-align: center;
 }
 
 .booking-fillBox {
-    background-color: white;
-    width: 350px;
-    height: 40px;
-    border-radius: 10px;
-    margin-left: 50px;
+    width: 90%;
+    height: 50px;
+    margin-left: 10px;
+    border: 2px solid #007AFF;
+    background-color: #040C18;
+    border-radius: 5px;
+    padding: 0 1rem;
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 28px;
+    color: #fff;
+    outline: none;
+    position: relative;
 }
 
 .booking-form {
-    margin-left: 50px;
+    margin-left: 20px;
+    margin-right: 20px;
     padding-top: 30px;
 }
 
@@ -26,25 +38,31 @@
     font-family: var(--font-family);
     font-size: 18px;
     font-weight: 500;
+    position: relative;
 }
 
 .book-button {
     width: 100px;
     height: 35px;
-    border-radius: 35px;
+    border-radius: 5px;
+    border: none;
     background: #007AFF;
-    margin-left: 60px;
+    margin-left: 30px;
     color: white;
     font-family: var(--font-family);
     font-weight: 800;
     transition: 0.5 ease-in-out;
 }
 .book-button:hover {
-    background-color: white;
+    background-color: #040C18;
     transition: 0.5 ease-in-out;
 }
 
 .UBus__header-content__input {
     width: 300px;
     margin: 2rem 0 1rem;
+}
+
+.small_margin {
+    text-overflow: clip;
 }
