--- a/UBus-react/src/containers/booking/booking.css
+++ b/UBus-react/src/containers/booking/booking.css
@@ -1,5 +1,5 @@
 .booking-container {
-    height: 40vh;
+    height: 44vh;
     width: 173vh;
     margin-left: 10%;
     margin-bottom: 50px;
@@ -34,7 +34,7 @@
 
 .booking-from-to {
     color: white;
-    margin: 20px;
+    margin: 10px;
     font-family: var(--font-family);
     font-size: 18px;
     font-weight: 500;
@@ -47,7 +47,6 @@
     border-radius: 5px;
     border: none;
     background: #007AFF;
-    margin-left: 30px;
     color: white;
     font-family: var(--font-family);
     font-weight: 800;
@@ -63,6 +62,6 @@
     margin: 2rem 0 1rem;
 }
 
-.small_margin {
-    text-overflow: clip;
+.align_a {
+    margin-bottom: 5px
 }
