--- a/UBus-react/src/components/navbar/navbar.css
+++ b/UBus-react/src/components/navbar/navbar.css
@@ -145,3 +145,82 @@
         display: block;
     }
 }
+
+.modal-content {
+    width: 400px;
+  }
+  
+  #username,
+  #password {
+    width: 100%;
+    height: 50px;
+    border: 2px solid #1a436e;
+    background-color: #040c18;
+    border-radius: 5px;
+    padding: 0 1rem;
+    font-family: 'Manrope', sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    color: #fff;
+    margin-bottom: 1rem;
+    outline: none;
+  }
+  
+  #username:focus,
+  #password:focus {
+    border: 2px solid #007aff;
+  }
+  
+  .modal-overlay {
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+
+  .separator {
+    margin-top: 10%;
+    text-align: center;
+  }
+  
+  .close-modal {
+    position: absolute;
+    top: 0; /* Adjust the top and right values as needed */
+    right: 10px; /* Adjust the top and right values as needed */
+    width: 50px;
+    height: 50px;
+    font-family: 'Manrope', sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    background: #007aff;
+    border: 2px solid #007aff;
+    padding: 0 1rem;
+    color: #fff;
+    cursor: pointer;
+    outline: none;
+    margin-top: 1rem;
+    border-radius: 5px;
+ }
+
+ .signin-btn {
+    width: 30%;
+    height: 50px;
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 28px;
+    background: #007AFF;
+    border: 2px solid #007AFF;
+    padding: 0 1rem;
+    color: #fff;
+    cursor: pointer;
+    outline: none;
+
+    border-radius: 5px;
+ }
+
+ #extra-signin  {
+   margin-bottom: 4%;
+   text-align: left;
+   font-size: 15px;
+ }
+  
