--- a/UBus-react/src/containers/search/search.css
+++ b/UBus-react/src/containers/search/search.css
@@ -139,7 +139,7 @@
 #search-input {
     width: 100%;
     height: 50px;
-    border: 2px solid #007AFF;
+    border: 2px solid #1a436e;
     background-color: #040C18;
     border-radius: 5px;
     padding: 0 1rem;
@@ -149,6 +149,10 @@
     line-height: 28px;
     color: #fff;
     outline: none;
+}
+
+#search-input:focus {
+    border: 2px solid #007AFF;
 }
 
 .searchBtn {
@@ -188,5 +192,4 @@
     justify-content: center;
     align-items: center;
     border-radius: 5px;
-  }
-  
+}  
