--- a/UBus-react/src/pages/pages.css
+++ b/UBus-react/src/pages/pages.css
@@ -8,21 +8,6 @@
     margin-right: 10%;
 }
 
-.signin-input {
-    width: 50%;
-    height: 50px;
-    border: 2px solid #007AFF;
-    background-color: #040C18;
-    border-radius: 5px;
-    padding: 0 1rem;
-    font-family: var(--font-family);
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 28px;
-    color: #fff;
-    outline: none;
-}
-
 .searchBtn {
     width: 10%;
     height: 50px;
@@ -39,4 +24,55 @@
     margin-top: 1rem;
 
     border-radius: 5px;
+}
+
+.page-content {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 10%;
+    margin-right: 10%;
+    align-items: center;
+    text-align: center;
+}
+
+.signup-input {
+    width: 50%;
+    height: 50px;
+    border: 2px solid #1a436e;
+    background-color: #040C18;
+    border-radius: 5px;
+    padding: 0 1rem;
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 28px;
+    color: #fff;
+    outline: none;
+}
+
+.form-group {
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+}
+
+.signupBtn {
+    width: 50%;
+    height: 50px;
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 28px;
+    background: #007AFF;
+    border: 2px solid #007AFF;
+    padding: 0 1rem;
+    color: #fff;
+    cursor: pointer;
+    outline: none;
+    margin-top: 1rem;
+
+    border-radius: 5px; 
+}
+
+.signup-input:focus {
+    border: 2px solid #007AFF;
 }
