--- a/UBus-react/src/containers/booking/booking.css
+++ b/UBus-react/src/containers/booking/booking.css
@@ -1,7 +1,6 @@
 .booking-container {
     height: 44vh;
-    width: 173vh;
-    margin-left: 10%;
+    width: 100%;
     margin-bottom: 50px;
     border-radius: 0 0 25px 25px;
     background-color: #292F38;
