--- a/UBus-react/src/containers/map/map.css
+++ b/UBus-react/src/containers/map/map.css
@@ -2,12 +2,11 @@
 
 #Service-map {
     border-radius: 25px 25px 0 0;
-    margin-left: 10%;
 }
 
 .leaflet-container {
     height: 70vh;
-    width: 173vh;
+    width: 100%;
 }
 
 @media screen and (max-width: 650px) {
