--- a/UBus-react/src/pages/pages.css
+++ b/UBus-react/src/pages/pages.css
@@ -29,6 +29,8 @@
 .page-content {
     margin-top: 20px;
     margin-bottom: 20px;
+    margin-left: 10%;
+    margin-right: 10%;
     align-items: center;
     text-align: center;
 }
