--- a/UBus-react/src/containers/search/search.css
+++ b/UBus-react/src/containers/search/search.css
@@ -169,8 +169,12 @@
     cursor: pointer;
     outline: none;
     margin-top: 1rem;
-
     border-radius: 5px;
+}
+
+.searchBtn:hover {
+    background-color: #1a436e;
+    border: 2px solid #1a436e;
 }
 
 .close-button {
@@ -192,4 +196,40 @@
     justify-content: center;
     align-items: center;
     border-radius: 5px;
-}  
+}
+
+.close-button:hover {
+    background-color: #1a436e;
+    border: 2px solid #1a436e;
+}
+
+ .result-box {
+    width: 100%;
+    height: 100%;
+    background-color: #040C18;
+    border-radius: 5px;
+    padding: 20px;
+    font-family: 'Manrope', sans-serif;
+    position: relative;
+    color: #96c9ff;
+    overflow-y: scroll;
+    max-height: 500px;
+  }
+  
+  .result-box ul {
+    list-style: armenian;
+    margin-top: 5px;;
+  }
+  
+  .result-box ul li {
+    list-style: none;
+    padding: 5px 10px;
+    font-size: 20px;
+    font-style: bold;
+  }
+
+  .result-box ul li:hover {
+    background-color: #16283b;
+    border-radius: 5px;
+    cursor: pointer;
+  }
