--- a/UBus-react/src/containers/ticket/ticket.css
+++ b/UBus-react/src/containers/ticket/ticket.css
@@ -1,80 +1,68 @@
-.section-title {
-    font-size: 35px;
-    font-weight: 800;
-    font-family: var(--font-family);
-    color: white;
-    margin-left: 75px;
-    margin-bottom: 50px;
+.ticket-container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #292F38;
+  border: 5px solid #238f0b;
+  border-radius: 35px;
+  font-family: Arial, sans-serif;
 }
 
-body {
-    color: white;
-    font-family: var(--font-family);
+.ticket-container h2 {
+  text-align: center;
+  font-size: 32px;
+  font-weight: 600;
+  margin-bottom: 10px;
+
 }
 
-table.center {
-    margin-left: auto; 
-    margin-right: auto;
-    text-align: center;
+.ticket-container .ticket-info {
+  margin: 10px 0;
 }
 
-/* Toggle switch */
-.switch {
-    position: relative;
-    display: inline-block;
-    width: 60px;
-    height: 34px;
-  }
-  
-  .switch input { 
-    opacity: 0;
-    width: 0;
-    height: 0;
-  }
-  
-  .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  .slider:before {
-    position: absolute;
-    content: "";
-    height: 26px;
-    width: 26px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  input:checked + .slider {
-    background-color: #2196F3;
-  }
-  
-  input:focus + .slider {
-    box-shadow: 0 0 1px #2196F3;
-  }
-  
-  input:checked + .slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
-  }
-  
-  /* Rounded sliders */
-  .slider.round {
-    border-radius: 34px;
-  }
-  
-  .slider.round:before {
-    border-radius: 50%;
-  }
+.ticket-container .ticket-info:first-child {
+  font-weight: bold;
+}
+
+.ticket-container .ticket-info:last-child {
+  margin-bottom: 0;
+}
+
+.ticket-container .ticket-info span {
+  font-weight: normal;
+}
+
+.ticket-container .ticket-info.ticket-id {
+  text-align: center;
+  font-size: 36px;
+  margin: 20px 0;
+}
+
+#purchase-info{
+  color: #ffffff81;
+  font-size: 10px;
+}
+
+.ticket-qr{
+  margin-top: 20px;
+}
+
+.warning {
+  font-size: 10px;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  text-align: justify;
+}
+
+.bold {
+  font-weight: 600;
+  color: #2f82e2;
+}
+
+.info {
+  font-weight: 300;
+}
+
+.line {
+  margin-top: 10px;
+}
