--- a/UBus-react/src/containers/ticket/ticket.css
+++ b/UBus-react/src/containers/ticket/ticket.css
@@ -6,6 +6,11 @@
   border: 5px solid #238f0b;
   border-radius: 35px;
   font-family: Arial, sans-serif;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
 
 .ticket-container h2 {
@@ -41,10 +46,11 @@
 #purchase-info{
   color: #ffffff81;
   font-size: 10px;
+  margin-bottom: 50px;
 }
 
 .ticket-qr{
-  margin-top: 20px;
+  margin-top: 50px;
 }
 
 .warning {
@@ -57,6 +63,7 @@
 .bold {
   font-weight: 600;
   color: #2f82e2;
+  margin-right: 10px;
 }
 
 .info {
@@ -64,5 +71,8 @@
 }
 
 .line {
-  margin-top: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 10px;
 }
