--- a/UBus-react/src/containers/search/search.css
+++ b/UBus-react/src/containers/search/search.css
@@ -1,235 +1,72 @@
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap');
-
-.K7__header {
-    display: flex;
-}
-
-.K7__header-content{
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    flex-direction: column;
-
-    margin-right: 5rem;
-}
-
-.K7__header-content h1 {
-    font-family: var(--font-family);
-    font-weight: 800;
-    font-size: 80px;
-    line-height: 75px;
-    letter-spacing: -0.04rem;
-}
-
-.K7__header-content p {
-    font-family: var(--font-family);
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height:  27px;
-    color: var(--color-text);
-
-    margin-top: 1.5rem;
-}
-
-.K7__header-img {
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.K7__header-img img {
-    width: 90%;
-    height: 100%;
-}
-
-.K7__header-content__input {
-    width: 50%;
-    margin: 2rem 0 1rem;
-
-    display: flex;
-}
-
-.K7__header-content__input button {
-    flex: 0.6;
-    width: 100%;
-    min-height: 50px;
-    font-family: var(--font-family);
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 28px;
-    background: #007AFF;
-    border: 2px solid #007AFF;
-    padding: 0 1rem;
-    color: #fff;
-    cursor: pointer;
-    outline: none;
-    margin-top: -20px;
-
-    border-radius: 5px;
-}
-
-#slogan {
-    font-size: 30px;
-    margin-top: -15px;
-}
-
-@media screen and (max-width: 1050px) {
-    .K7__header {
-        flex-direction: column;
-    }
-
-    .K7__header-content {
-        margin: 0 0 3rem;
-    }
-}
-
-@media screen and (max-width: 650px) {
-    .K7__header h1 {
-        font-size: 48px;
-        line-height: 60px;
-    }
-
-    .K7__header p {
-        font-size: 16px;
-        line-height: 24px;
-    }
-}
-
-@media screen and (max-width: 490px) {
-    .K7__header h1 {
-        font-size: 36px;
-        line-height: 48px;
-    }
-
-    .K7__header p {
-        font-size: 14px;
-        line-height: 24px;
-    }
-}
-
 .modal-overlay {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
-    z-index: 999;
-}
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+  }
   
-.modal-content {
+  .modal-content {
+    background-color: #fff;
     padding: 20px;
+    border-radius: 8px;
+    width: 400px;
+  }
+  
+  .modal-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+  }
+  
+  .close-button {
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 18px;
+  }
+  
+  .modal-title {
+    font-size: 24px;
+    margin: 0;
+  }
+  
+  select {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+  }
+  
+  button {
+    background-color: #4285f4;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
     border-radius: 4px;
-    background: #040C18;
-    color: var(--color-text);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-family: 'Manrope', sans-serif;
-    position: relative;
-}
-
-#search-input {
-    width: 100%;
-    height: 50px;
-    border: 2px solid #1a436e;
-    background-color: #040C18;
-    border-radius: 5px;
-    padding: 0 1rem;
-    font-family: var(--font-family);
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 28px;
-    color: #fff;
-    outline: none;
-}
-
-#search-input:focus {
-    border: 2px solid #007AFF;
-}
-
-.searchBtn {
-    width: 10%;
-    height: 50px;
-    font-family: var(--font-family);
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 28px;
-    background: #007AFF;
-    border: 2px solid #007AFF;
-    padding: 0 1rem;
-    color: #fff;
     cursor: pointer;
-    outline: none;
-    margin-top: 1rem;
-    border-radius: 5px;
-}
-
-.searchBtn:hover {
-    background-color: #1a436e;
-    border: 2px solid #1a436e;
-}
-
-.close-button {
-    position: absolute;
-    top: 10px; /* Adjust the top and right values as needed */
-    right: 10px; /* Adjust the top and right values as needed */
-    width: 50px;
-    height: 50px;
-    font-family: var(--font-family);
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 28px;
-    background: #007AFF;
-    border: 2px solid #007AFF;
-    color: #fff;
-    cursor: pointer;
-    outline: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 5px;
-}
-
-.close-button:hover {
-    background-color: #1a436e;
-    border: 2px solid #1a436e;
-}
-
- .result-box {
-    width: 100%;
-    height: 100%;
-    background-color: #040C18;
-    border-radius: 5px;
-    padding: 20px;
-    font-family: 'Manrope', sans-serif;
-    position: relative;
-    color: #96c9ff;
-    overflow-y: scroll;
-    max-height: 500px;
   }
   
-  .result-box ul {
-    list-style: armenian;
-    margin-top: 5px;;
+  button:focus {
+    outline: none;
   }
   
-  .result-box ul li {
-    list-style: none;
-    padding: 5px 10px;
-    font-size: 20px;
-    font-style: bold;
+  .bus-info {
+    margin-top: 20px;
   }
-
-  .result-box ul li:hover {
-    background-color: #16283b;
-    border-radius: 5px;
-    cursor: pointer;
+  
+  .bus-info h3 {
+    font-size: 18px;
+    margin-bottom: 10px;
   }
+  
+  .bus-info p {
+    font-size: 14px;
+    line-height: 1.5;
+  }
+  
